syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";


import "ubertool_trusted_backend/v1/organization_service.proto";

option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "UserServiceProto";

// User service
service UserService {
  // Get user profile
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // Update user profile
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

// Get user request
message GetUserRequest {
}

// Get user response
message GetUserResponse {
  User user = 1;
}

// Update profile request
message UpdateProfileRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string avatar_url = 4;
}

// Update profile response
message UpdateProfileResponse {
  User user = 1;
}

// User message
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string avatar_url = 5;
  repeated Organization orgs = 6;
  string created_on = 7; // Date string YYYY-MM-DD
}

